@@ -1,3 +1,7 @@
+2015-12-20  Ulrich Müller  <ulm@gentoo.org>
+
+	* elisp.eclass: Support EAPI 6.
+
 2015-05-25  Ulrich Müller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-file-install): Fix filename
